[gd_scene load_steps=14 format=3 uid="uid://b6qiham7oh4rh"]

[ext_resource type="Texture2D" uid="uid://b362qpmvsyw3q" path="res://tempus_assets/abilities_container.png" id="1_b8fap"]
[ext_resource type="Script" path="res://scripts/ability_panel.gd" id="1_b11cn"]
[ext_resource type="Texture2D" uid="uid://bab8hhuyuwldy" path="res://tempus_assets/ui_assets.png" id="2_maaoy"]
[ext_resource type="Texture2D" uid="uid://kddmxf5m788b" path="res://tempus_assets/ability sprites/skill_icons24.png" id="3_inr8c"]
[ext_resource type="FontFile" uid="uid://hdche2nivxw2" path="res://tempus_assets/font/Alkhemikal.ttf" id="3_r4pq6"]
[ext_resource type="FontFile" uid="uid://cio0c4khks1uc" path="res://tempus_assets/font/monogram/ttf/monogram.ttf" id="4_7pkx6"]
[ext_resource type="Texture2D" uid="uid://brflobhbarjry" path="res://sprites/textures/vecteezy_white-circle-png_21115771.png" id="4_ygavq"]
[ext_resource type="Texture2D" uid="uid://bp4nweo24u3vx" path="res://tempus_assets/chibi heads/kai_chibi_head.png" id="6_uttqa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d0io6"]
atlas = ExtResource("1_b8fap")
region = Rect2(0, 0, 48, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n1u4k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_35x3o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kt1t7"]
atlas = ExtResource("2_maaoy")
region = Rect2(32, 48, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a28th"]
atlas = ExtResource("2_maaoy")
region = Rect2(0, 48, 32, 32)

[node name="AbilityPanel" type="TextureRect"]
custom_minimum_size = Vector2(80, 50)
texture = SubResource("AtlasTexture_d0io6")
script = ExtResource("1_b11cn")

[node name="UseAbilityBtn" type="Button" parent="."]
custom_minimum_size = Vector2(80, 50)
layout_mode = 0
offset_right = 80.0
offset_bottom = 50.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_n1u4k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_35x3o")

[node name="AbilityIcon" type="Sprite2D" parent="."]
position = Vector2(52, 25)
scale = Vector2(1.22917, 1.22917)
texture = ExtResource("3_inr8c")

[node name="CooldownFilter" type="ColorRect" parent="AbilityIcon"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.2034
offset_top = -24.2034
offset_right = -0.203396
offset_bottom = -0.2034
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="CooldownBar" type="TextureProgressBar" parent="AbilityIcon"]
visible = false
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
value = 60.0
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("4_ygavq")
tint_progress = Color(1, 1, 1, 0.588235)

[node name="CooldownTimer" type="Timer" parent="AbilityIcon/CooldownBar"]
wait_time = 30.0
one_shot = true

[node name="DetailsPanel" type="NinePatchRect" parent="."]
visible = false
z_index = 5
layout_mode = 0
offset_left = -10.0
offset_top = -15.0
offset_right = 90.0
offset_bottom = 25.0
texture = SubResource("AtlasTexture_kt1t7")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="AbilityName" type="Label" parent="DetailsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 408.0
offset_bottom = 107.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("3_r4pq6")
theme_override_font_sizes/font_size = 100
text = "Slow Down"

[node name="AbilityDescription" type="Label" parent="DetailsPanel"]
custom_minimum_size = Vector2(840, 170)
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 848.0
offset_bottom = 202.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("4_7pkx6")
theme_override_font_sizes/font_size = 70
text = "This ability causes testicular torsion to everyone in a 10 mile radius"
autowrap_mode = 3

[node name="HeadContainer" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 4.0
offset_top = 16.0
offset_right = 34.0
offset_bottom = 46.0
texture = SubResource("AtlasTexture_a28th")

[node name="Sprite2D" type="Sprite2D" parent="HeadContainer"]
position = Vector2(15, 15)
scale = Vector2(0.84375, 0.84375)
texture = ExtResource("6_uttqa")
offset = Vector2(0, -1)
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[connection signal="mouse_entered" from="UseAbilityBtn" to="." method="_on_use_ability_btn_mouse_entered"]
[connection signal="mouse_exited" from="UseAbilityBtn" to="." method="_on_use_ability_btn_mouse_exited"]
